refactor: update executor to use virtual threads in tests and configuration